refactor on process and execute methods rm generic executable field and no mark executable one by one